# Nihongo-Wakarimasen

./: .gitignore  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt  setup.ps1
config/: asr_hints_ja_ko.json  stt_corrections_ja.json  stt_hotwords_ja.example.json  translation_dictionary_ja_ko.json
src/nihongo_wakarimasen/: asr_corrector.py  audio.py  config.py  conversation_log.py  debug_log.py  diagnostics.py  hotword_manager.py  main.py  models.py  openai_stt.py  overlay.py  papago_credentials.py  pipeline.py  realtime_translate.py  stt.py  stt_corrections.py  stt_hotwords.py  translator.py
tools/: build_hotword_manager_exe.ps1  build_model_downloader_exe.ps1  build_overlay_exe.ps1  create_release_zip.ps1  hotword_manager.ps1  hotword_manager_entry.py  model_downloader_entry.py  overlay_control.ps1  overlay_entry.py  preload_local_model.ps1  preload_local_model.py
